--- a/public/css/app.css
+++ b/public/css/app.css
@@ -45,7 +45,20 @@ div .py-4{
       background-color: #fafafa;
       padding:0
 }
+/* */
+/* CHECK IN / OUT STOCK MODAL */
+.ivu-modal-footer{
+    display: flex;
+    justify-content: center;
+}
 
+.ivu-input-wrapper.check-in-stock-quantity-input{
+    width:20%;
+}
+
+.ivu-input-wrapper.check-in-stock-remarks-input{
+    width:80%;
+}
 
   /* GLOBAL SHARED STYLES*/
 ._box_shadow {
