--- a/public/css/app.css
+++ b/public/css/app.css
@@ -599,7 +599,7 @@ select {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.tw-sr-only {
+.sr-only {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -610,309 +610,457 @@ select {
   white-space: nowrap;
   border-width: 0;
 }
-.tw-absolute {
+.absolute {
   position: absolute;
 }
-.tw-relative {
+.relative {
   position: relative;
 }
-.tw-right-0 {
+.inset-y-0 {
+  top: 0px;
+  bottom: 0px;
+}
+.left-0 {
+  left: 0px;
+}
+.right-0 {
   right: 0px;
 }
-.tw-mx-auto {
+.mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
-.tw-ml-10 {
-  margin-left: 2.5rem;
+.mt-6 {
+  margin-top: 1.5rem;
 }
-.tw-ml-4 {
-  margin-left: 1rem;
-}
-.tw-ml-3 {
-  margin-left: 0.75rem;
-}
-.tw-mt-2 {
+.mt-2 {
   margin-top: 0.5rem;
 }
-.tw-mr-2 {
-  margin-right: 0.5rem;
+.mt-8 {
+  margin-top: 2rem;
 }
-.tw-ml-auto {
-  margin-left: auto;
+.ml-2 {
+  margin-left: 0.5rem;
 }
-.tw-mt-3 {
-  margin-top: 0.75rem;
+.ml-10 {
+  margin-left: 2.5rem;
 }
-.-tw-mr-2 {
+.ml-4 {
+  margin-left: 1rem;
+}
+.ml-3 {
+  margin-left: 0.75rem;
+}
+.-mr-2 {
   margin-right: -0.5rem;
 }
-.tw-block {
+.ml-auto {
+  margin-left: auto;
+}
+.mt-3 {
+  margin-top: 0.75rem;
+}
+.block {
   display: block;
 }
-.tw-flex {
+.flex {
   display: flex;
 }
-.tw-inline-flex {
+.inline-flex {
   display: inline-flex;
 }
-.tw-hidden {
+.table {
+  display: table;
+}
+.hidden {
   display: none;
 }
-.tw-h-16 {
+.h-full {
+  height: 100%;
+}
+.h-12 {
+  height: 3rem;
+}
+.h-4 {
+  height: 1rem;
+}
+.h-5 {
+  height: 1.25rem;
+}
+.h-16 {
   height: 4rem;
 }
-.tw-h-8 {
+.h-8 {
   height: 2rem;
 }
-.tw-h-6 {
+.h-6 {
   height: 1.5rem;
 }
-.tw-h-10 {
+.h-10 {
   height: 2.5rem;
 }
-.tw-min-h-full {
+.h-96 {
+  height: 24rem;
+}
+.min-h-screen {
+  min-height: 100vh;
+}
+.min-h-full {
   min-height: 100%;
 }
-.tw-w-8 {
+.w-full {
+  width: 100%;
+}
+.w-auto {
+  width: auto;
+}
+.w-4 {
+  width: 1rem;
+}
+.w-5 {
+  width: 1.25rem;
+}
+.w-8 {
   width: 2rem;
 }
-.tw-w-6 {
+.w-6 {
   width: 1.5rem;
 }
-.tw-w-48 {
+.w-48 {
   width: 12rem;
 }
-.tw-w-10 {
+.w-10 {
   width: 2.5rem;
 }
-.tw-min-w-full {
+.min-w-full {
   min-width: 100%;
 }
-.tw-max-w-7xl {
+.max-w-md {
+  max-width: 28rem;
+}
+.max-w-7xl {
   max-width: 80rem;
 }
-.tw-max-w-xs {
+.max-w-xs {
   max-width: 20rem;
 }
-.tw-flex-shrink-0 {
+.flex-shrink-0 {
   flex-shrink: 0;
 }
-.tw-origin-top-right {
+.origin-top-right {
   transform-origin: top right;
 }
-.tw-scale-95 {
+.scale-95 {
   --tw-scale-x: .95;
   --tw-scale-y: .95;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.tw-scale-100 {
+.scale-100 {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.tw-transform {
+.transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.tw-items-center {
+.cursor-pointer {
+  cursor: pointer;
+}
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.items-center {
   align-items: center;
 }
-.tw-items-baseline {
+.items-baseline {
   align-items: baseline;
 }
-.tw-justify-center {
+.justify-center {
   justify-content: center;
 }
-.tw-justify-between {
+.justify-between {
   justify-content: space-between;
 }
-.tw-space-x-4 > :not([hidden]) ~ :not([hidden]) {
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+.-space-y-px > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(-1px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(-1px * var(--tw-space-y-reverse));
+}
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.tw-space-y-1 > :not([hidden]) ~ :not([hidden]) {
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
-.tw-rounded-md {
+.rounded-md {
   border-radius: 0.375rem;
 }
-.tw-rounded-full {
+.rounded-none {
+  border-radius: 0px;
+}
+.rounded {
+  border-radius: 0.25rem;
+}
+.rounded-full {
   border-radius: 9999px;
 }
-.tw-border-t {
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.rounded-t-md {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+.rounded-b-md {
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+.border {
+  border-width: 1px;
+}
+.border-4 {
+  border-width: 4px;
+}
+.border-t {
   border-top-width: 1px;
 }
-.tw-border-gray-700 {
+.border-dashed {
+  border-style: dashed;
+}
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.border-transparent {
+  border-color: transparent;
+}
+.border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
-.tw-bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
-.tw-bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-.tw-bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.tw-bg-gray-100 {
+.bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
-.tw-p-1 {
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.bg-indigo-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+}
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.p-1 {
   padding: 0.25rem;
 }
-.tw-p-2 {
+.p-2 {
   padding: 0.5rem;
 }
-.tw-px-4 {
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.tw-px-3 {
+.px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.tw-py-2 {
+.py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.tw-py-1 {
+.py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
-.tw-px-2 {
+.px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.tw-px-5 {
+.px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-.tw-py-6 {
+.py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
-.tw-pt-2 {
+.pl-3 {
+  padding-left: 0.75rem;
+}
+.pt-2 {
   padding-top: 0.5rem;
 }
-.tw-pb-3 {
+.pb-3 {
   padding-bottom: 0.75rem;
 }
-.tw-pt-4 {
+.pt-4 {
   padding-top: 1rem;
 }
-.tw-text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-center {
+  text-align: center;
 }
-.tw-text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-.tw-text-3xl {
+.text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
-.tw-font-medium {
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.font-extrabold {
+  font-weight: 800;
+}
+.font-medium {
   font-weight: 500;
 }
-.tw-font-bold {
+.font-bold {
   font-weight: 700;
 }
-.tw-leading-none {
+.leading-none {
   line-height: 1;
 }
-.tw-text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.tw-text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-.tw-text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-.tw-text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-.tw-text-gray-900 {
+.text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
-.tw-opacity-0 {
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+.text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-indigo-500 {
+  --tw-text-opacity: 1;
+  color: rgb(99 102 241 / var(--tw-text-opacity));
+}
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.antialiased {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.placeholder-gray-500::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-placeholder-opacity));
+}
+.placeholder-gray-500:-ms-input-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-placeholder-opacity));
+}
+.placeholder-gray-500::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-placeholder-opacity));
+}
+.opacity-0 {
   opacity: 0;
 }
-.tw-opacity-100 {
+.opacity-100 {
   opacity: 1;
 }
-.tw-shadow-lg {
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.tw-shadow {
+.shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.tw-outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-.tw-ring-2 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-.tw-ring-1 {
+.ring-1 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-.tw-ring-white {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
-}
-.tw-ring-black {
+.ring-black {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
 }
-.tw-ring-opacity-5 {
+.ring-opacity-5 {
   --tw-ring-opacity: 0.05;
 }
-.tw-ring-offset-2 {
-  --tw-ring-offset-width: 2px;
-}
-.tw-ring-offset-gray-800 {
-  --tw-ring-offset-color: #1f2937;
-}
-.tw-transition {
+.transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.tw-duration-100 {
+.duration-100 {
   transition-duration: 100ms;
 }
-.tw-duration-75 {
+.duration-75 {
   transition-duration: 75ms;
 }
-.tw-ease-out {
+.ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
-.tw-ease-in {
+.ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 #app{
@@ -1017,62 +1165,103 @@ div .py-4{
       margin-right: -10px;
       margin-left: -10px;
   }
-  .hover\:tw-bg-gray-700:hover {
+  .hover\:bg-indigo-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 56 202 / var(--tw-bg-opacity));
+}
+  .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
-  .hover\:tw-text-white:hover {
+  .hover\:text-indigo-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(99 102 241 / var(--tw-text-opacity));
+}
+  .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-  .focus\:tw-outline-none:focus {
+  .focus\:z-10:focus {
+  z-index: 10;
+}
+  .focus\:border-indigo-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
+}
+  .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
-  .focus\:tw-ring-2:focus {
+  .focus\:ring-2:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-  .focus\:tw-ring-white:focus {
+  .focus\:ring-indigo-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
+}
+  .focus\:ring-white:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
 }
-  .focus\:tw-ring-offset-2:focus {
+  .focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
 }
-  .focus\:tw-ring-offset-gray-800:focus {
+  .focus\:ring-offset-gray-800:focus {
   --tw-ring-offset-color: #1f2937;
+}
+  .group:hover .group-hover\:text-indigo-400 {
+  --tw-text-opacity: 1;
+  color: rgb(129 140 248 / var(--tw-text-opacity));
 }
   @media (min-width: 640px) {
 
-  .sm\:tw-px-6 {
+  .sm\:items-center {
+    align-items: center;
+  }
+
+  .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
 
-  .sm\:tw-px-3 {
+  .sm\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
+  }
+
+  .sm\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .sm\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
   @media (min-width: 768px) {
 
-  .md\:tw-ml-6 {
+  .md\:ml-6 {
     margin-left: 1.5rem;
   }
 
-  .md\:tw-block {
+  .md\:block {
     display: block;
   }
 
-  .md\:tw-hidden {
+  .md\:hidden {
     display: none;
   }
 }
   @media (min-width: 1024px) {
 
-  .lg\:tw-px-8 {
+  .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
   }
