--- a/public/css/app.css
+++ b/public/css/app.css
@@ -669,6 +669,9 @@ select {
 .table {
   display: table;
 }
+.grid {
+  display: grid;
+}
 .hidden {
   display: none;
 }
@@ -729,6 +732,9 @@ select {
 .w-10 {
   width: 2.5rem;
 }
+.w-1\/2 {
+  width: 50%;
+}
 .min-w-full {
   min-width: 100%;
 }
@@ -780,6 +786,9 @@ select {
 .justify-between {
   justify-content: space-between;
 }
+.justify-items-stretch {
+  justify-items: stretch;
+}
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
@@ -804,6 +813,9 @@ select {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+.justify-self-center {
+  justify-self: center;
 }
 .rounded-md {
   border-radius: 0.375rem;
