completed admin  manage warehouse  and view report

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -969,6 +969,9 @@ select {
 .font-bold {
   font-weight: 700;
 }
+.capitalize {
+  text-transform: capitalize;
+}
 .italic {
   font-style: italic;
 }
