--- a/public/css/app.css
+++ b/public/css/app.css
@@ -795,6 +795,9 @@ select {
 .justify-between {
   justify-content: space-between;
 }
+.justify-around {
+  justify-content: space-around;
+}
 .gap-3 {
   gap: 0.75rem;
 }
