fix perform cycle counting UI

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -610,6 +610,9 @@ select {
   white-space: nowrap;
   border-width: 0;
 }
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
@@ -625,6 +628,9 @@ select {
 }
 .right-0 {
   right: 0px;
+}
+.top-0 {
+  top: 0px;
 }
 .col-span-2 {
   grid-column: span 2 / span 2;
@@ -705,6 +711,9 @@ select {
 .h-screen {
   height: 100vh;
 }
+.max-h-full {
+  max-height: 100%;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -737,6 +746,9 @@ select {
 }
 .w-1\/2 {
   width: 50%;
+}
+.w-3\/4 {
+  width: 75%;
 }
 .min-w-full {
   min-width: 100%;
